Mon Dec  6 14:06:25 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/occ:  Move to src-occ/org/jcae/mesh/cad/occ
	  These routines are put into a new jcae-mesherocc.jar archive.

Mon Dec  6 11:58:12 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/occ/OCCShapeBuilder.java:  Read .step files.

	* src/org/jcae/mesh/cad/CADGeomCurve2D.java
	  src/org/jcae/mesh/cad/occ/OCCGeomCurve2D.java:  New getRange() method.

	* src/org/jcae/mesh/cad/CADShape.java
	  src/org/jcae/mesh/cad/occ/OCCShape.java:  New writeNative() method to save shape into the native format.

	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/TestMetrics.java:  Replace all references to org.jcae.opencascade.jni routines by generic org.jcae.mesh.cad ones.

Fri Nov 26 15:45:37 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java:  Curve length do not have to be very precise, so compute less intermediate nodes.

Fri Nov 26 15:34:32 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/tools/Calculus3D.java:  In distance(), do not subdivide into smaller segments.  This was very time consuming, and for unknow reasons gave worse meshes.

Fri Nov 26 10:35:22 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java:  Do not insert more than 3 nodes on long edges, in order to prevent flat triangles.

Thu Nov 25 15:24:00 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/java3d:  Put back this simple viewer.

	* src/org/jcae/mesh/MeshView.java:  A main entry to display jcae3d meshes.

Thu Nov 25 12:30:12 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/occ/OCCShapeBuilder.java
	  src/org/jcae/mesh/Mesher.java:  Interface of IGESControl_Reader in occjava.jar has changed.

Wed Nov 24 15:39:03 CET 2004 Denis Barbier <barbier@users.sourceforge.net>
